Call ruby_init_setproctitle before process_options

Fixes [Bug #11269]